refactored address conversion outside persistence layer